--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 <h1 id="app-launch-flow">APP Launch Flow</h1>
 
-<p><img title="High Level EHR APP Launch Flow" alt="alt text" src="/images/ehr_launch_seq.PNG" /></p>
+<p><img title="High Level EHR APP Launch Flow" alt="alt text" src="images/ehr_launch_seq.png" /></p>
 
 <h1 id="project-setup">Project Setup</h1>
 
