--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 </thead><tbody>
 <tr>
 <td>App Name</td>
-<td>&ldquo;My amazing SMART app&rdquo;. Any name will do.</td>
+<td><code class="prettyprint">My amazing SMART app</code> Any name will do.</td>
 </tr>
 <tr>
 <td>SMART Launch URI</td>
@@ -240,19 +240,19 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 </tr>
 <tr>
 <td>Redirect URI</td>
-<td><code class="prettyprint">https://&lt;your-username&gt;.github.io/smart-tutorial/example-smart-app/index.html</code></td>
+<td><code class="prettyprint">https://&lt;your-username&gt;.github.io/smart-tutorial/example-smart-app</code></td>
 </tr>
 <tr>
 <td>App Type</td>
-<td>Provider</td>
+<td><code class="prettyprint">Provider</code></td>
 </tr>
 <tr>
 <td>FHIR Spec</td>
-<td>DSTU2 The latest spec version supported by Cerner.</td>
+<td><code class="prettyprint">DSTU2</code> The latest spec version supported by Cerner.</td>
 </tr>
 <tr>
 <td>Authorized</td>
-<td>Yes. Authorized App will go through secured OAuth2 login.</td>
+<td><code class="prettyprint">Yes</code> Authorized App will go through secured OAuth2 login.</td>
 </tr>
 <tr>
 <td>Standard Scopes</td>
@@ -280,7 +280,7 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 
 <p>In this example <code class="prettyprint">Launch URI</code> is launch.html. launch.html redirects to the FHIR authorization server which in-turn redirects to the <code class="prettyprint">Redirect URI</code>, index.html, upon a successful authentication.</p>
 
-<p>Post authentication index.html exchanges the returned authorization token for an access token and is then able to request resources from the FHIR server. Lets take a deeper look at launch.html and get it ready for authentication. For more information about the SMART app launching vist the <a href="http://docs.smarthealthit.org/authorization/">SMART Health IT site</a></p>
+<p>Post authentication index.html exchanges the returned authorization token for an access token and is then able to request resources from the FHIR server. Lets take a deeper look at launch.html and get it ready for authentication. For more information about the SMART app launching vist the <a href="http://docs.smarthealthit.org/authorization/">SMART Health IT site</a>.</p>
 
 <p><img title="High Level EHR APP Launch Flow" alt="alt text" src="images/ehr_launch_seq.png" /></p>
 
@@ -301,7 +301,7 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
     <span class="nt">&lt;script </span><span class="na">src=</span><span class="s">'./lib/fhir-client.min.js'</span><span class="nt">&gt;&lt;/script&gt;</span>
     <span class="nt">&lt;script&gt;</span>
       <span class="nx">FHIR</span><span class="p">.</span><span class="nx">oauth2</span><span class="p">.</span><span class="nx">authorize</span><span class="p">({</span>
-        <span class="s1">'client_id'</span><span class="p">:</span> <span class="s1">'df7c5a17-52dd-4c88-8a32-cdfb557ba758'</span><span class="p">,</span>
+        <span class="s1">'client_id'</span><span class="p">:</span> <span class="s1">'&lt;enter your client id here&gt;'</span><span class="p">,</span>
         <span class="s1">'scope'</span><span class="p">:</span>  <span class="s1">'patient/Patient.read patient/Observation.read launch online_access openid profile'</span>
       <span class="p">});</span>
     <span class="nt">&lt;/script&gt;</span>
