--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
       <div class="content">
         <h1 id="introduction">Introduction</h1>
 
-<p>This tutorial will walk you through creating an app in Cerners SMART on FHIR ecosystem.</p>
+<p>This tutorial will walk you through creating an app in Cerner&rsquo;s SMART on FHIR ecosystem.</p>
 
 <p>After completing this tutorial you know know how to:</p>
 
 <ul>
 <li>Create a basic SMART on FHIR app.</li>
 <li>Self register an app with Cerner.</li>
-<li>Run an app in Cerners SMART on FHIR sandbox.</li>
+<li>Run an app in Cerner&rsquo;s SMART on FHIR sandbox.</li>
 </ul>
 
 <h1 id="project-setup">Project Setup</h1>
 
-<p>Fork this tutorial from <a href="https://github.com/parthivbhagat/smart-tutorial">smart-tutorial</a> using githubs ui.</p>
+<p>Fork this tutorial from <a href="https://github.com/parthivbhagat/smart-tutorial">smart-tutorial</a> using github&rsquo;s ui.</p>
 
 <p>Clone a copy down to your local machine.</p>
 
@@ -172,7 +172,7 @@ This tutorial is designed to have a minimal footprint so we made the decision to
 
 <p><strong>index.html</strong></p>
 
-<p>Index.html well be re-directed to following a successful authorization. This file is the entry point to the application.</p>
+<p>Index.html will be re-directed to following a successful authorization. This file is the entry point to the application.</p>
 
 <p>The other content you see in the source folder is the site for this tutorial. We used <a href="https://github.com/lord/slate">Slate</a>.</p>
 
@@ -186,7 +186,7 @@ This tutorial is designed to have a minimal footprint so we made the decision to
   <span class="nt">&lt;head&gt;</span>
     <span class="nt">&lt;meta</span> <span class="na">http-equiv=</span><span class="s">'X-UA-Compatible'</span> <span class="na">content=</span><span class="s">'IE=edge'</span> <span class="nt">/&gt;</span>
     <span class="nt">&lt;meta</span> <span class="na">http-equiv=</span><span class="s">'Content-Type'</span> <span class="na">content=</span><span class="s">'text/html; charset=utf-8'</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;title&gt;&lt;your-username&gt;</span>Example-SMART-App<span class="nt">&lt;/title&gt;</span>
+    <span class="nt">&lt;title&gt;</span>[YOUR-USERNAME]Example-SMART-App<span class="nt">&lt;/title&gt;</span>
     ...
 </code></pre>
 
@@ -210,9 +210,9 @@ This tutorial is designed to have a minimal footprint so we made the decision to
 
 <p>For the purposes of this tutorial we will be hosting our SMART app through <a href="https://help.github.com/articles/what-is-github-pages">GitHub Pages</a>. GitHub Pages is a convenient way to host static or client rendered web sites.</p>
 
-<p>Setting up GitHub pages is easy, so easy in fact that it&rsquo;s already done for you. GitHub pages works by hosting content from a gh-pages branch. Since you forked the tutorial the gh-pages branch is already created, however GitHub won&rsquo;t publish your site until you make a change to the gh-pages branch, so lets make a change. Modify the index.html page to include your GitHub user-name in the title commit and push the change to master.</p>
+<p>Setting up GitHub pages is easy, so easy in fact that it&rsquo;s already done for you. GitHub pages works by hosting content from a gh-pages branch. Since you forked the tutorial the gh-pages branch is already created, however GitHub won&rsquo;t publish your site until you make a change to the gh-pages branch, so let&rsquo;s make a change. Modify the index.html page to include your GitHub user-name in the title, commit, and push the change to master.</p>
 
-<p>Now that we have a change, lets redeploy the App. Because this tutorial is built from Slate, we have a handy built in script to deploy changes to the GitHub Pages branch. Go ahead run ./deploy.sh to deploy your SMART app.</p>
+<p>Now that we have a change, let&rsquo;s redeploy the App. Because this tutorial is built from Slate, we have a handy built in script to deploy changes to the GitHub Pages branch. Go ahead run ./deploy.sh to deploy your SMART app.</p>
 
 <p>Once the app has been redeployed go to <code class="prettyprint">https://&lt;your-username&gt;.github.io/smart-tutorial/example-smart-app/health</code> to ensure your app is available.</p>
 
@@ -222,7 +222,7 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 
 <h1 id="registration">Registration</h1>
 
-<p>Now that we have a deployed SMART app, lets register it to access Cerner&rsquo;s FHIR resources. We have created a self registration console to allow any developer to be able run a SMART app against our development environment. Navigate to our <a href="https://code.cerner.com/developer/smart-on-fhir/smart_apps">code console</a>, if you don&rsquo;t have a Cerner Care Account, go ahead and sign up for one (it&rsquo;s free!). Once logged into the console, click on the &ldquo;+ Register New App&rdquo; button in the top right toolbar and fill in the following details:</p>
+<p>Now that we have a deployed SMART app, let&rsquo;s register it to access Cerner&rsquo;s FHIR resources. We have created a self registration console to allow any developer to be able run a SMART app against our development environment. Navigate to our <a href="https://code.cerner.com/developer/smart-on-fhir/smart_apps">code console</a>, if you don&rsquo;t have a Cerner Care Account, go ahead and sign up for one (it&rsquo;s free!). Once logged into the console, click on the &ldquo;+ Register New App&rdquo; button in the top right toolbar and fill in the following details:</p>
 
 <table><thead>
 <tr>
@@ -274,13 +274,13 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 
 <h1 id="app-launch">App Launch</h1>
 
-<p>We have now created our own SMART app and registered that app with Cerner to access the FHIR resources. Before we continue on with the next steps, lets take a moment to talk about the flow of a SMART app launch.</p>
+<p>We have now created our own SMART app and registered that app with Cerner to access the FHIR resources. Before we continue on with the next steps, let&rsquo;s take a moment to talk about the flow of a SMART app launch.</p>
 
-<p>The SMART app launch flow beings with the EHR. Through some method a user has indicated that they wish to launch a smart application. The EHR redirects to the SMART <code class="prettyprint">Launch URI</code> that was registered above.</p>
+<p>The SMART app launch flow begins with the EHR. Through some method a user has indicated that they wish to launch a smart application. The EHR redirects to the SMART <code class="prettyprint">Launch URI</code> that was registered above.</p>
 
 <p>In this example <code class="prettyprint">Launch URI</code> is launch.html. launch.html redirects to the FHIR authorization server which in-turn redirects to the <code class="prettyprint">Redirect URI</code>, index.html, upon a successful authentication.</p>
 
-<p>Post authentication index.html exchanges the returned authorization token for an access token and is then able to request resources from the FHIR server. Lets take a deeper look at launch.html and get it ready for authentication. For more information about the SMART app launching vist the <a href="http://docs.smarthealthit.org/authorization/">SMART Health IT site</a>.</p>
+<p>Post authentication, index.html exchanges the returned authorization token for an access token and is then able to request resources from the FHIR server. Let&rsquo;s take a deeper look at launch.html and get it ready for authentication. For more information about the SMART app launching vist the <a href="http://docs.smarthealthit.org/authorization/">SMART Health IT site</a></p>
 
 <p><img title="High Level EHR APP Launch Flow" alt="alt text" src="images/ehr_launch_seq.png" /></p>
 
@@ -357,12 +357,12 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 We will always include launch, online_access, openid &amp; profile scopes to our app.</p>
 
 <aside class="notice">
-Cerner does not allow use of wildcards(*). So instead of patient/\*.read you will need specify a particular scope of resource you will be using. Something like patient/Patient.read, patient/Observation.read etc. For list of resources visit [http://fhir.cerner.com/](http://fhir.cerner.com/)
+Cerner does not allow use of wildcards(*). So instead of patient/\*.read you will need specify a particular scope of resource you will be using. Something like patient/Patient.read, patient/Observation.read etc. For the list of resources, visit <a href='http://fhir.cerner.com/'>http://fhir.cerner.com/</a>
 </aside>
 
 <p>So just what exactly is the <code class="prettyprint">FHIR.oauth2.authorize</code> method doing?</p>
 
-<p>Through a EHR launch, launch.html will be supplied with two query params <code class="prettyprint">iss</code> and <code class="prettyprint">launch</code></p>
+<p>Through an EHR launch, launch.html will be supplied with two query params <code class="prettyprint">iss</code> and <code class="prettyprint">launch</code></p>
 
 <p><code class="prettyprint">iss</code> is the EHR&rsquo;s FHIR end point and <code class="prettyprint">launch</code> is an identifier that will be passed along to the authentication server.</p>
 
@@ -526,7 +526,7 @@ The oauth2 client id is an identifier, not a secret as such it does not need to 
 
 <p>The last function from fhir-client.js is the <code class="prettyprint">byCodes</code> utility function that returns a function to search a given resource for specific codes returned from that response.</p>
 
-<p>The fhir-client.js library defines several more api&rsquo;s that will come in handy while developing smart app, read about them <a href="http://docs.smarthealthit.org/clients/javascript/">here</a>.</p>
+<p>The fhir-client.js library defines several more api&rsquo;s that will come in handy while developing smart app. Read about them <a href="http://docs.smarthealthit.org/clients/javascript/">here</a>.</p>
 
 <h1 id="displaying-the-resource">Displaying the Resource</h1>
 
@@ -610,7 +610,7 @@ The oauth2 client id is an identifier, not a secret as such it does not need to 
 <span class="p">...</span>
 </code></pre>
 
-<p>The last remaining task for our application is displaying the resource information we&rsquo;ve retrieved. We won&rsquo;t be doing anything fancy here. In &ldquo;index.html&rdquo; we define a table with several id place holders. On a success from <code class="prettyprint">extractData</code> we&rsquo;ll call drawVisualization which will show the table div as well as filling out the relevant sections.</p>
+<p>The last remaining task for our application is displaying the resource information we&rsquo;ve retrieved. In &ldquo;index.html&rdquo; we define a table with several id place holders. On a success from <code class="prettyprint">extractData</code> we&rsquo;ll call <code class="prettyprint">drawVisualization</code> which will show the table div as well as filling out the relevant sections.</p>
 
 <h1 id="test-your-app">Test your App</h1>
 
@@ -631,7 +631,7 @@ The oauth2 client id is an identifier, not a secret as such it does not need to 
 <ul>
 <li>Created a basic SMART on FHIR app.</li>
 <li>Registered that app with Cerner.</li>
-<li>Run the app in Cerners SMART on FHIR sandbox.</li>
+<li>Run the app in Cerner&rsquo;s SMART on FHIR sandbox.</li>
 </ul>
 
 <p>We&rsquo;ve created a very basic application that meets the base requirements of being a SMART app. This application would require a fair amount of polish before being ready to be deployed in a production environment. A couple of next steps you could look at are:</p>
@@ -640,7 +640,7 @@ The oauth2 client id is an identifier, not a secret as such it does not need to 
 <li>Try calling another resource.</li>
 <li>Write unit tests for the application.</li>
 <li>Pull in fhir-client.js through a package manager like webpack.</li>
-<li>Style the site using Cerners open source UX library Terra.</li>
+<li>Style the site using Cerner&rsquo;s open source UX library <a href="https://github.com/cerner/terra-ui.com">Terra</a>.</li>
 </ul>
 
 <p>We&rsquo;re excited to see what you&rsquo;ll build next!</p>
