--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>SMART on FHIR Starter APP update</title>
+    <title>SMART on FHIR Starter APP</title>
 
     <style>
       .highlight table td { padding: 5px; }
@@ -113,7 +113,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id="introduction">Introduction v1</h1>
+        <h1 id="introduction">Introduction</h1>
 
 <p>This tutorial will walk you through creating an app in Cerner&rsquo;s SMART on FHIR ecosystem.</p>
 
