--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -63,7 +63,7 @@
       </table>
     </div>
     <script src='./src/js/example-smart-app.js'></script>
-    <script src='./lib/fhir-client.min.js'></script>
+    <script src='./lib/fhir-client.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
       extractData().then(
