--- a/source/example-smart-app/health.html
+++ b/source/example-smart-app/health.html
@@ -6,6 +6,7 @@
     <title>Example-SMART-App</title>
   </head>
   <body>
-    Healthy!
+    <img src="./src/images/batman.gif" alt="Batman">
+    <p>Healthy!</p>
   </body>
 </html>
