--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -10,7 +10,7 @@
     <script src='./lib/fhir-client.js'></script>
     <script>
       FHIR.oauth2.authorize({
-          'client_id': '3f6d371e-6385-4918-933a-30a907b89906',
+        'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
