--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -11,7 +11,8 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '6c12dff4-24e7-4475-a742-b08972c4ea27',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'Patient.read,Observation.read',
+		'redirect_uri': 'https://dkfriend07.github.io/test-smart-tutorial/example-smart-app/'
       });
     </script>
   </body>
