--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -12,7 +12,7 @@
       FHIR.oauth2.authorize({
         'client_id': '6c12dff4-24e7-4475-a742-b08972c4ea27',
         'scope':  'Patient.read,Observation.read',
-		'redirect_uri': 'https://dkfriend07.github.io/test-smart-tutorial/example-smart-app/'
+		'grant_type': 'authorization_code'
       });
     </script>
   </body>
