--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Example-SMART-App</title>
   </head>
-  Loading...
+  Loading... work
   <body>
     <script src='./lib/fhir-client.js'></script>
     <script>
