--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -11,7 +11,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '61d72daf-b95c-4b9a-9c8c-900ce91ed7e5',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'Patient.read,Observation.read' //patient/Patient.read patient/Observation.read launch online_access openid profile
       });
     </script>
   </body>
